fix for findbugs. small logger fix.